Changes from stale disjoint comm branch [skip ci]

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,6 +120,9 @@ target_link_libraries(enrico PUBLIC libenrico)
 # =============================================================================
 add_executable(comm_split_demo tests/comm_split_demo/main.cpp)
 
+add_executable(disjoint_comm_demo tests/disjoint_comm_demo/main.cpp)
+target_link_libraries(disjoint_comm_demo PUBLIC libenrico)
+
 add_executable(test_nek5000_singlerod tests/singlerod/short/test_nek5000.cpp)
 target_link_libraries(test_nek5000_singlerod PUBLIC libenrico)
 
@@ -128,7 +131,7 @@ target_link_libraries(test_openmc_singlerod PUBLIC libenrico)
 
 # Ensure C++14 standard is used
 set_target_properties(
-    enrico libenrico
+        enrico libenrico
     comm_split_demo
     heat_xfer
     iapws
