Adding liblapack to Travis CI build

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
       - mpich
       - libmpich-dev
       - libhdf5-mpich-dev
+      - liblapack-dev
     config:
       retries: true
 cache:
