Fixed nekRS submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,8 +10,7 @@
 	path = vendor/catch
 	url = https://github.com/catchorg/Catch2.git
 	branch = master
-[submodule "upstream"]
-	path = vendor/nekRS
-	url = https://github.com/Nek5000/nekRS.git
 [submodule "vendor/nekRS"]
+	path = vendor/nekRS
 	url = https://github.com/RonRahaman/nekRS.git
+	branch = mesh_interface
