--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,35 @@
 cmake_minimum_required(VERSION 3.3)
 project(enrico Fortran C CXX)
 
+#===============================================================================
+# RPATH and install information
+#===============================================================================
+
+# NekRS must be installed (via `make install`) to have all headers/libs available.
+# For ENRICO, we'll install in the build directory by default
+if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+    set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/install CACHE PATH "" FORCE)
+endif ()
+
+# This block of code ensures that dynamic libraries can be found via the RPATH
+# whether the executable is the original one from the build directory or the
+# installed one in CMAKE_INSTALL_PREFIX. Ref:
+# https://gitlab.kitware.com/cmake/community/wikis/doc/cmake/RPATH-handling
+
+# use, i.e. don't skip the full RPATH for the build tree
+set(CMAKE_SKIP_BUILD_RPATH  FALSE)
+
+# when building, don't use the install RPATH already
+# (but later on when installing)
+set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
+
+set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+
+# add the automatically determined parts of the RPATH
+# which point to directories outside the build tree to the install RPATH
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+
+
 # =============================================================================
 # Nek Options
 # =============================================================================
@@ -57,42 +86,6 @@ if (USE_NEK5000)
             nek_end
             nek_solve)
 endif ()
-
-#===============================================================================
-# RPATH and install information
-#===============================================================================
-
-# Provide install directory variables as defined by GNU coding standards
-include(GNUInstallDirs)
-
-# NekRS must be installed (via `make install`) to have all headers/libs available.
-# For ENRICO, we'll install in the build directory by default
-if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
-    set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/install CACHE PATH "" FORCE)
-endif ()
-
-# This block of code ensures that dynamic libraries can be found via the RPATH
-# whether the executable is the original one from the build directory or the
-# installed one in CMAKE_INSTALL_PREFIX. Ref:
-# https://gitlab.kitware.com/cmake/community/wikis/doc/cmake/RPATH-handling
-
-# use, i.e. don't skip the full RPATH for the build tree
-set(CMAKE_SKIP_BUILD_RPATH  FALSE)
-
-# when building, don't use the install RPATH already
-# (but later on when installing)
-set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
-
-# add the automatically determined parts of the RPATH
-# which point to directories outside the build tree to the install RPATH
-set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-
-# the RPATH to be used when installing, but only if it's not a system directory
-list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${CMAKE_INSTALL_FULL_LIBDIR}" isSystemDir)
-if("${isSystemDir}" STREQUAL "-1")
-  set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_FULL_LIBDIR}")
-endif()
-
 
 # =============================================================================
 # Headers for all targets
