Change CI to use OpenMPI instead of MPICH

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,6 @@ env:
   MPI_DIR: /usr
   OMP_NUM_THREADS: 2
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  MPICH_FC: gfortran
 
 jobs:
   main:
@@ -43,9 +42,8 @@ jobs:
         run: |
           sudo apt -y update
           sudo apt install -y gfortran \
-                              mpich \
-                              libmpich-dev \
-                              libhdf5-mpich-dev \
+                              libopenmpi-dev \
+                              libhdf5-openmpi-dev \
                               liblapack-dev
       - name: before_install
         shell: bash
