--- a/.gitmodules
+++ b/.gitmodules
@@ -12,5 +12,5 @@
 	branch = master
 [submodule "vendor/nekRS"]
 	path = vendor/nekRS
-	url = https://github.com/Nek5000/nekRS.git
+	url = https://github.com/stgeke/public-nekRS.git
 	branch = mesh_interface
